calico_versioned_docs/version-3.33/getting-started/kubernetes/rancher.mdx
---
description: Install Calico Open Source on a Rancher Kubernetes Engine cluster.
title: Installing on RKE
---

# Rancher Kubernetes Engine (RKE)

## Big picture

Install $[prodname] as the required CNI for networking and/or network policy on Rancher-deployed clusters.

## Concepts

$[prodname] supports the Calico CNI with Calico network policy:

The geeky details of what you get:

<GeekDetails
  prodname='$[prodname]'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:IPIP,Routing:BGP,Datastore:Kubernetes'
/>

## Before you begin

**Required**

- A compatible [Rancher Kubernetes Engine cluster](https://rancher.com/docs/rke/latest/en/) with version 1.3

  - Configure your cluster with a [Cluster Config File](https://rke.docs.rancher.com/installation#creating-the-cluster-configuration-file) and specify [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/) by setting `plugin: none` under `network` in your configuration file.

- RKE cluster meets the [$[prodname] requirements](requirements.mdx)

- A `kubectl` environment with access to your cluster

  - Use [Rancher kubectl Shell](https://ranchermanager.docs.rancher.com/how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig#accessing-clusters-with-kubectl-shell-in-the-rancher-ui) for access
  - Ensure you have the [kubeconfig file that was generated when you created the cluster](https://rancher.com/docs/rke/latest/en/installation/#save-your-files).

- If using a kubeconfig file locally, [install and set up the Kubectl CLI tool](https://kubernetes.io/docs/tasks/tools/install-kubectl/).

## How to

- [Install $[prodname]](#install-calico)

### Install $[prodname]

1. Install the $[prodname] custom resource definitions.

   If your cluster is based on Kubernetes 1.36 or later:

   ```
   kubectl create -f $[manifestsUrl]/manifests/v3_projectcalico_org.yaml
   ```

   If your cluster is based on Kubernetes 1.34 or 1.35:

   ```
   kubectl create -f $[manifestsUrl]/manifests/v3_projectcalico_org-v1beta1.yaml
   ```

1. Install the Tigera Operator.

   ```
   kubectl create -f $[manifestsUrl]/manifests/tigera-operator.yaml
   ```

1. Install $[prodname] by creating the necessary custom resource. For more information on configuration options available in this manifest, see [the Tigera Operator API reference](../../reference/installation/api.mdx).

   ```
   kubectl create -f $[manifestsUrl]/manifests/custom-resources.yaml
   ```

   :::note

   Before creating this manifest, read its contents and make sure its settings are correct for your environment. For example,
   you may need to change the default IP pool CIDR to match your pod network CIDR. Rancher uses `10.42.0.0/16` by default.

   :::

   :::note

   If you are installing $[prodname] on Windows nodes in this cluster, please see the [$[prodnameWindows] for RKE](windows-calico/rancher.mdx) installation instructions.

   :::

1. Confirm that all of the pods are running with the following command.

   ```
   watch kubectl get pods -n calico-system
   ```

   Wait until each pod has the `STATUS` of `Running`.

Congratulations! You now have an RKE cluster running $[prodname]

## Next steps

**Required**

- [Install and configure calicoctl](../../operations/calicoctl/install.mdx)

**Recommended tutorials**

- [Secure a simple application using the Kubernetes NetworkPolicy API](../../network-policy/get-started/kubernetes-policy/kubernetes-policy-basic.mdx)
- [Control ingress and egress traffic using the Kubernetes NetworkPolicy API](../../network-policy/get-started/kubernetes-policy/kubernetes-policy-advanced.mdx)
- [Run a tutorial that shows blocked and allowed connections in real time](../../network-policy/get-started/kubernetes-policy/kubernetes-demo.mdx)
